# gesture-controlled-applications

./: .gitignore  PRODUCTION_READINESS_REPORT.md  PROJECT_SUMMARY.md  README.md  start.bat  start.sh
.agent/workflows/: install-deps.md  start-dev.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  gateway.py
backend/api/rest/: __init__.py  health.py  projects.py
backend/api/websocket/: __init__.py  hub.py
backend/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  types.py
backend/features/: __init__.py
backend/features/finger_count/: README.md  __init__.py  actions.py  classifier.py  config.py
backend/features/presentation/: __init__.py
backend/features/sign_language/: __init__.py
backend/features/virtual_mouse/: README.md  __init__.py  actions.py  classifier.py  config.py  filters.py
backend/features/volume_control/: README.md  __init__.py  actions.py  classifier.py  config.py
backend/pipelines/: __init__.py  orchestrator.py
backend/pipelines/extraction/: __init__.py  hand_tracker.py
backend/pipelines/inference/: __init__.py  engine.py
backend/pipelines/inference/classifiers/: __init__.py  finger_count.py
backend/pipelines/ingestion/: __init__.py  camera.py
backend/pipelines/output/: __init__.py  dispatcher.py
backend/pipelines/preprocessing/: __init__.py  normalizer.py
backend/projects/: __init__.py  registry.py
docs/: api-reference.md  setup-guide.md
docs/architecture/: 00-ARCHITECTURE-OVERVIEW.md  01-BACKEND-ARCHITECTURE.md  02-FRONTEND-ARCHITECTURE.md  03-API-GATEWAY-DESIGN.md  04-PIPELINE-DEVELOPMENT-GUIDE.md  05-DESIGN-SYSTEM.md  06-PROJECT-SPECIFICATIONS.md  07-DEVELOPMENT-WORKFLOW.md
frontend/: .prettierignore  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/.agent/: REFACTORING_PLAN.md  UI_REFACTOR_SUMMARY.md
frontend/src/: App.css  App.tsx  index.css  setupTests.ts
(+181 files in other folders)
